# dp-copulagan-package

./: .zenodo.json  CITATION.cff  INSTALLATION.md  LICENSE  LIMITATIONS.md  MANIFEST.in  README.md  codemeta.json  paper.bib  paper.md  pyproject.toml
dp_copulagan/: __init__.py
dp_copulagan/copula/: __init__.py  gaussian_copula.py
dp_copulagan/dp/: __init__.py  dp_sgd.py  noise_calibration.py
dp_copulagan/evaluation/: __init__.py  evaluator.py
dp_copulagan/gan/: __init__.py  critic.py  generator.py  gradient_penalty.py  spectral_norm.py
dp_copulagan/metrics/: __init__.py  ml_utility.py  statistical.py
dp_copulagan/models/: __init__.py  dp_copulagan.py
dp_copulagan/preprocessing/: __init__.py  categorical_encoder.py  preprocessor.py  type_detection.py
dp_copulagan/utils/: __init__.py  config.py  helpers.py  unsupervised_eval.py  validation.py
examples/scripts/: conditional_example.py  example_unconditional.py  multiclass_evaluation_example.py  quickstart.py  run_adult.py  unsupervised_evaluation_example.py
tests/integration/: test_full_pipeline.py  test_unconditional_mode.py
tests/unit/: test_config.py  test_copula.py  test_dp_sgd.py  test_preprocessing.py
