[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dp_copulagan"
version = "0.2.3"
description = "Differentially Private Synthetic Data Generation using Copula and GANs (Detailed ML Utility Reporting)"
readme = "README.md"
authors = [
    {name = "Comp", email = "your.email@example.com"}
]
license = {text = "GPL-3.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
]
keywords = [
    "differential-privacy",
    "synthetic-data",
    "gan",
    "copula",
    "machine-learning",
    "privacy-preserving",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "tensorflow>=2.8.0",
    "tf-keras>=2.15.0",
    "tensorflow-probability>=0.16.0",
    "xgboost>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "nbsphinx>=0.8.8",
]

[project.urls]
Homepage = "https://github.com/yourname/dp-copulagan"
Documentation = "https://dp-copulagan.readthedocs.io"
Repository = "https://github.com/yourname/dp-copulagan"
"Bug Tracker" = "https://github.com/yourname/dp-copulagan/issues"

[tool.setuptools]
packages = ["dp_copulagan"]

[tool.setuptools.package-data]
dp_copulagan = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=dp_copulagan --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
